--- a/test-output/old/AutomationSuite/methods.html
+++ b/test-output/old/AutomationSuite/methods.html
@@ -1,24 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>AutomationSuite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a7bfbc">  <td>18/04/30 11:44:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass()[pri:0, instance:com.cucumber.Test.TestRunnerB@50ad3bc1]">&gt;&gt;setUpClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@833407330</td>   <td></td> </tr>
-<tr bgcolor="a7bfbc">  <td>18/04/30 11:44:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass()[pri:0, instance:com.cucumber.Test.TestRunnerA@6f46426d]">&gt;&gt;setUpClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@1598166853</td>   <td></td> </tr>
-<tr bgcolor="9d86fb">  <td>18/04/30 11:44:04</td>   <td>216</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestRunnerA.InitializeTest(java.lang.String)[pri:0, instance:com.cucumber.Test.TestRunnerA@6f46426d]">&gt;&gt;InitializeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@1598166853</td>   <td></td> </tr>
-<tr bgcolor="689daf">  <td>18/04/30 11:44:04</td>   <td>216</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestRunnerB.InitializeTest(java.lang.String)[pri:0, instance:com.cucumber.Test.TestRunnerB@50ad3bc1]">&gt;&gt;InitializeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@833407330</td>   <td></td> </tr>
-<tr bgcolor="a7bfbc">  <td>18/04/30 11:44:06</td>   <td>2603</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.feature(cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:com.cucumber.Test.TestRunnerA@6f46426d]">feature</td> 
-  <td>TestNG-tests-2@1598166853</td>   <td></td> </tr>
-<tr bgcolor="a7bfbc">  <td>18/04/30 11:44:12</td>   <td>8240</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.feature(cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:com.cucumber.Test.TestRunnerB@50ad3bc1]">feature</td> 
-  <td>TestNG-tests-1@833407330</td>   <td></td> </tr>
-<tr bgcolor="9d86fb">  <td>18/04/30 11:44:12</td>   <td>8986</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestRunnerA.afterMethod()[pri:0, instance:com.cucumber.Test.TestRunnerA@6f46426d]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@1598166853</td>   <td></td> </tr>
-<tr bgcolor="a7bfbc">  <td>18/04/30 11:44:13</td>   <td>9081</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:com.cucumber.Test.TestRunnerA@6f46426d]">&lt;&lt;tearDownClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@1598166853</td>   <td></td> </tr>
-<tr bgcolor="689daf">  <td>18/04/30 11:44:15</td>   <td>11945</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestRunnerB.afterMethod()[pri:0, instance:com.cucumber.Test.TestRunnerB@50ad3bc1]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@833407330</td>   <td></td> </tr>
-<tr bgcolor="a7bfbc">  <td>18/04/30 11:44:16</td>   <td>12650</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:com.cucumber.Test.TestRunnerB@50ad3bc1]">&lt;&lt;tearDownClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@833407330</td>   <td></td> </tr>
+<tr bgcolor="b5dd6c">  <td>18/05/02 12:41:31</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass()[pri:0, instance:com.cucumber.Test.TestRunnerA@71238fc2]">&gt;&gt;setUpClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1036688303</td>   <td></td> </tr>
+<tr bgcolor="dc7162">  <td>18/05/02 12:41:32</td>   <td>224</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestRunnerA.InitializeTest(java.lang.String)[pri:0, instance:com.cucumber.Test.TestRunnerA@71238fc2]">&gt;&gt;InitializeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1036688303</td>   <td></td> </tr>
+<tr bgcolor="b5dd6c">  <td>18/05/02 12:41:34</td>   <td>2619</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.feature(cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:com.cucumber.Test.TestRunnerA@71238fc2]">feature</td> 
+  <td>TestNG-tests-1@1036688303</td>   <td></td> </tr>
+<tr bgcolor="dc7162">  <td>18/05/02 12:42:21</td>   <td>49913</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestRunnerA.afterMethod()[pri:0, instance:com.cucumber.Test.TestRunnerA@71238fc2]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1036688303</td>   <td></td> </tr>
+<tr bgcolor="b5dd6c">  <td>18/05/02 12:42:21</td>   <td>50010</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:com.cucumber.Test.TestRunnerA@71238fc2]">&lt;&lt;tearDownClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1036688303</td>   <td></td> </tr>
 </table>
